<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/OneTimePassTheme.ActionBar"
    >

    <group
        android:id="@+id/optgrp_account_list"
        android:visible="false">
        <item
            android:id="@+id/action_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/search"
            app:actionViewClass="android.support.v7.widget.SearchView"
            app:showAsAction="ifRoom|collapseActionView" />
        <item
            android:id="@+id/action_add_account"
            android:theme="@style/OneTimePassTheme.ActionBar"
            android:icon="@android:drawable/ic_menu_add"
            android:orderInCategory="100"
            android:title="@string/add_account"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_scan_qr"
            android:theme="@style/OneTimePassTheme.ActionBar"
            android:icon="@android:drawable/ic_menu_camera"
            android:orderInCategory="150"
            android:title="@string/scan_qr"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_import_data"
            android:theme="@style/OneTimePassTheme.ActionBar"
            android:icon="@drawable/ic_import_data"
            android:orderInCategory="950"
            android:title="@string/import_data"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_export_data"
            android:theme="@style/OneTimePassTheme.ActionBar"
            android:icon="@drawable/ic_export_data"
            android:orderInCategory="951"
            android:title="@string/export_data"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_change_lock"
            android:theme="@style/OneTimePassTheme.ActionBar"
            android:icon="@android:drawable/ic_menu_manage"
            android:orderInCategory="900"
            android:title="@string/change_passphrase"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_about"
            android:theme="@style/OneTimePassTheme.ActionBar"
            android:icon="@android:drawable/ic_menu_info_details"
            android:orderInCategory="990"
            android:title="@string/about"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_quit"
            android:theme="@style/OneTimePassTheme.ActionBar"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:orderInCategory="999"
            android:title="@string/quit"
            app:showAsAction="never" />
    </group>

</menu>
