<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/optgrp_account_info"
        android:visible="false">
        <item
            android:id="@+id/action_edit_account"
            android:theme="@android:style/Theme.NoTitleBar"
            android:icon="@android:drawable/ic_menu_edit"
            android:orderInCategory="100"
            android:title="@string/edit"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_delete_account"
            android:theme="@android:style/Theme.NoTitleBar"
            android:icon="@android:drawable/ic_menu_delete"
            android:orderInCategory="200"
            android:title="@string/delete"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_cancel_account"
            android:theme="@android:style/Theme.NoTitleBar"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:orderInCategory="300"
            android:title="@string/back"
            app:showAsAction="never" />
    </group>

</menu>
